2003-03-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (clear_icon):
	(clear_icon):
	(AutoPlaceIcon):
	(Iconify):
	* fvwm/geometry.c (get_icon_geometry):
	(modify_icon_position):
	set a valid icon picture position if there is neither a picture nor a
	title

2003-03-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* AUTHORS:
	reformatted to fit better on the web page

2003-03-15  Mikhael Goikhman  <migo@homemail.com>

	* todo-2.6:
	added items from "My TODO" message on 2003-01-02

	* fvwm/fvwm.1.in:
	actually remove duplicate Iconify entry, use $[w.id] not $w, more fixes

2003-03-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/FScreen.c:
	removed debug output

2003-03-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/FScreen.c (FScreenMangleScreenIntoUSPosHints):
	(FScreenFetchMangledScreenFromUSPosHints):
	two functions to allow USPosition hints from modules and StartsOnScreen
	work at the same time

	* fvwm/conditional.c (direction_cmd):
	Some fixes, reformatting and improvements.

2003-03-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (Iconify):
	initialise icon position to +0+0 if there is neiter a picture nor a
	title

	* fvwm/functions.c (DeferExecution):
	action trigger fix

	* todo-2.6 (todo):
	closed some items

	* fvwm/update.c (apply_window_updates):
	fixed drawing of sticky icon titles when the stickyicon style is being
	set

2003-03-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (CMD_PlaceAgain):
	* fvwm/add_window.c (setup_window_placement):
	* fvwm/virtual.c (MapDesk):
	update the GNOME hints desk when changing desks; fixes placeagain with
	stickyicon style
	some placeagain fixes

	* fvwm/fvwm.1.in (Example):
	removed duplicate Iconify section

	* todo-2.6 (todo):
	closed C.11

	* fvwm/functable.c (func_table):
	* fvwm/functions.h (func_type):
	* fvwm/functions.c (__execute_function):
	(execute_complex_function):
	(DeferExecution):
	fixed a new and and old window selection bug
