@@ -40,10 +40,10 @@ AddToMenu Modules
 + "Auto Raise/Lower"     Module FvwmAuto 300 "Silent Raise" "Silent Lower"
 .EE
 .fi
-The \fITimeout\fP argument is required. It specifies how long a window must
-retain the keyboard input focus before the command is executed. The
-delay is measured in milliseconds, and any integer 0 or greater is
-acceptable.
+The \fITimeout\fP argument is required. It specifies how long a
+window must retain the keyboard input focus before the command is
+executed. The delay is measured in milliseconds, and any integer
+greater than zero is valid.
 
 If the literal option \fI-passid\fP is given, the window id of the
 window just entered or left is appended to the command that is
